<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="?android:colorBackground"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/toolbar_text_margin_start"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/toolbar_icon_margin_end"
            android:src="@android:drawable/ic_menu_manage"
            app:tint="?attr/colorPrimary"
            android:contentDescription="Settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/search_margin_top"
            android:background="?android:colorBackground"
            android:hint="@string/search_users"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:paddingStart="@dimen/search_padding_start"
            android:paddingEnd="@dimen/search_padding_end"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorHint"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/no_friends_margin_top"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/no_friends_message"
        android:textColor="?android:textColorSecondary"
        android:textSize="@dimen/no_friends_text_size"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/recycler_margin_top"
        android:layout_marginStart="@dimen/recycler_margin_side"
        android:layout_marginEnd="@dimen/recycler_margin_side"
        android:background="?android:colorBackground"
        tools:listitem="@layout/user_item" />

</LinearLayout>